# RT1

./: .gitignore  README.md
.github/workflow/: static.yml
.github/workflows/: static.yml
assignment1_rt/: CMakeLists.txt  README.md  conf.py  package.xml
assignment1_rt/docs/: conf.py
assignment1_rt/scripts/: distance_node2.py  ui_node1.py
assignment1_rt/src/: distance_node2.cpp  ui_node1.cpp
assignment1_rt/srv/: SetThreshold.srv
assignment2_part1_rt/: CMakeLists.txt  README.md  package.xml
assignment2_part2_rt/: CMakeLists.txt  README.md  package.xml
assignment2_part2_rt/docs/: conf.py  cpp_docs.rst  launch_files.rst
assignment2_part2_rt/docs/html/: .buildinfo  cpp_docs.html  genindex.html  index.html  launch_files.html  objects.inv  py-modindex.html  search.html  searchindex.js
assignment2_part2_rt/docs/html/_sources/: index.rst.txt
assignment2_part2_rt/docs/html/doxygen/html/: annotated.html  classMoveRobotNode-members.html  classMoveRobotNode.html  classMoveRobotNode__coll__graph.map  classMoveRobotNode__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  move__robot__node_8cpp.html  move__robot__node_8cpp__incl.map  move__robot__node_8cpp__incl.md5
assignment2_part2_rt/docs/html/doxygen/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js
assignment2_part2_rt/docs/html/doxygen/latex/: annotated.tex  classMoveRobotNode.tex  classMoveRobotNode__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  hierarchy.tex  move__robot__node_8cpp.tex  move__robot__node_8cpp__incl.md5  refman.tex
assignment2_part2_rt/doxygen/: Doxyfile
assignment2_part2_rt/launch/: gazebo.launch.py
assignment2_part2_rt/src/: move_robot_node.cpp
assignment2_part2_rt/urdf/: robot4.gazebo  robot4.xacro
(+40 files in other folders)
